out5_win.txt
.\build\lp.exe : In 
file included from examp
les\__lp_05_system_sqlit
e.c:3:
At line:1 char:1
+ .\build\lp.exe example
s\05_system_sqlite.lp 
-c 05.exe > out5.txt 
2>&1
+ ~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo      
        : NotSpecified  
  : (In file include.   
 ..tem_sqlite.c:3::S    
tring) [], RemoteEx    
ception
    + FullyQualifiedErr 
   orId : NativeComman  
  dError
 
examples\__lp_05_system_
sqlite.c: In function 
'lp_main':
examples\__lp_05_system_
sqlite.c:13:22: error: 
incompatible type for 
argument 1 of 
'lp_print_int'
   13 |     
lp_print_generic(lp_os);
      |                 
     ^~~~~
      |                 
     |
      |                 
     LpVal
D:/LP/runtime/lp_runtime
.h:75:3: note: in 
definition of macro 
'lp_print_generic'
   75 | )(x)
      |   ^
D:/LP/runtime/lp_runtime
.h:50:41: note: 
expected 'int64_t' {aka 
'long long int'} but 
argument is of type 
'LpVal'
   50 | static inline 
void 
lp_print_int(int64_t v) 
{ printf("%" PRId64 
"\n", v); }
      |                 
                
~~~~~~~~^
examples\__lp_05_system_
sqlite.c:14:22: error: 
incompatible type for 
argument 1 of 
'lp_print_int'
   14 |     lp_print_gen
eric(lp_arch);
      |                 
     ^~~~~~~
      |                 
     |
      |                 
     LpVal
D:/LP/runtime/lp_runtime
.h:75:3: note: in 
definition of macro 
'lp_print_generic'
   75 | )(x)
      |   ^
D:/LP/runtime/lp_runtime
.h:50:41: note: 
expected 'int64_t' {aka 
'long long int'} but 
argument is of type 
'LpVal'
   50 | static inline 
void 
lp_print_int(int64_t v) 
{ printf("%" PRId64 
"\n", v); }
      |                 
                
~~~~~~~~^
examples\__lp_05_system_
sqlite.c:18:132: error: 
incompatible type for 
argument 2 of 
'lp_str_concat'
   18 |     lp_sqlite_ex
ecute(lp_db, lp_str_conc
at(lp_str_concat(lp_str_
concat(lp_str_concat("IN
SERT INTO sys_logs (os, 
cores) VALUES ('", 
lp_os), "', "), 
lp_str(lp_cores)), 
");"));
      |                 
                        
                        
                        
                        
                   ^~~~~
      |                 
                        
                        
                        
                        
                   |
      |                 
                        
                        
                        
                        
                   LpVal
D:/LP/runtime/lp_runtime
.h:169:62: note: 
expected 'const char *' 
but argument is of type 
'LpVal'
  169 | static inline 
char 
*lp_str_concat(const 
char *a, const char *b) 
{
      |                 
                        
         ~~~~~~~~~~~~^
[LP] Compilation failed 
(gcc exit 1)
[LP Build] SQLite module detected (Tier 1). Statically linking sqlite3.o...
